--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,46 @@
 
+body{
+}
+h1{
+  text-align: center;
+  width: 50%;
+  margin: auto;
+  border-radius: 100%;
+  padding: 30px;
+  background-color: red;
+
+}
+header{
+  background-color: white;
+  text-align: right;
+  margin:20px;
+}
 #interface{
     width: 80%;
     margin: auto;
-    background-color: grey;
 }
 .signe{
   width : 30%;
-  height: 300px;
-  background-color: red;
+  height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .reponseSigne{
-  font-size: 220px;
-  color : blue;
+  text-align: center;
+  width: 100%;
+  font-size: 50px;
+  color : black;
 }
 
 #question{
   margin: auto;
   width: 30%;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 #imgQuestion{
   width: 100%;
@@ -31,6 +50,5 @@
   margin-top: 100px;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+  margin: 0 0 50px 0;
 }
