--- a/css/style.css
+++ b/css/style.css
@@ -52,3 +52,30 @@ header{
   flex-direction: row;
   margin: 0 0 50px 0;
 }
+
+@media (min-width: 800px){
+  #question{
+    width: 20%;
+  }
+  h1{
+    width: 30%;
+  }
+}
+
+@media (min-width: 1000px){
+  #question{
+    width: 15%;
+  }
+  h1{
+    width: 25%;
+  }
+}
+
+@media (min-width: 1400px){
+  #question{
+    width: 10%;
+  }
+  h1{
+    width: 15%;
+  }
+}
