--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,28 @@
+#imgQuestion{
 
-body{
 }
-h1{
+/*h5{
   text-align: center;
+
+  font-size: 10px;
   width: 50%;
   margin: auto;
   border-radius: 100%;
-  padding: 30px;
-  background-color: red;
+  padding: 50px;
 
-}
-header{
+}*/
+/*header{
   background-color: white;
   text-align: right;
   margin:20px;
-}
-#interface{
-    width: 80%;
-    margin: auto;
-}
-.signe{
+}*/
+/*.signe{
   width : 30%;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-}
+}*/
 
 .reponseSigne{
   text-align: center;
@@ -33,8 +30,11 @@ header{
   font-size: 50px;
   color : black;
 }
-
 #question{
+  font-size: 150px;
+  text-align: center;
+}
+.question{
   margin: auto;
   width: 30%;
   height: 300px;
@@ -47,13 +47,13 @@ header{
 }
 
 #reponse{
-  margin-top: 100px;
   display: flex;
   flex-direction: row;
-  margin: 0 0 50px 0;
+  justify-content: space-around;
+  margin: 100px 0 50px 0;
 }
 
-@media (min-width: 800px){
+/*@media (min-width: 800px){
   #question{
     width: 20%;
   }
@@ -78,4 +78,4 @@ header{
   h1{
     width: 15%;
   }
-}
+}*/
